--- a/Dockerfile.noweb
+++ b/Dockerfile.noweb
@@ -12,6 +12,8 @@
 #     yarn generate
 
 FROM golang:1-alpine AS go_build
+ARG IGNORE_CHINA_MIRROR=0
+
 LABEL stage=buildgo
 
 ADD . /acfunlive-src
@@ -20,10 +22,14 @@ WORKDIR /acfunlive-src
 ENV GO111MODULE=on \
     GOPROXY="https://goproxy.cn" \
     CGO_ENABLED=0
-
-RUN go build
+RUN if [ "$IGNORE_CHINA_MIRROR" = 1 ]; then \
+    unset GOPROXY ;\
+    fi; \ 
+    apk add git && \
+    go build 
 
 FROM alpine
+ARG IGNORE_CHINA_MIRROR=0
 
 ENV BINFILE="/acfunlive/acfunlive" \
     CONFIGDIR="/acfunlive/config" \
@@ -34,7 +40,9 @@ EXPOSE 51880
 
 RUN mkdir -p $CONFIGDIR && \
     mkdir -p $RECORDDIR && \
-    sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories && \
+    if [ ! "$IGNORE_CHINA_MIRROR" = 1 ]; then \
+        sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories; \
+    fi; \ 
     apk update && \
     apk upgrade && \
     apk --no-cache add ffmpeg libc6-compat tzdata && \
