--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Build-Offical:
+  Build-Offical-Testonly:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -24,17 +24,26 @@ jobs:
         build-args: |
           "IGNORE_CHINA_MIRROR=1"
           "NODE_OPTIONS=--openssl-legacy-provider"
-  Build-NoWeb:
+  Build-NoWeb-Publisth:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
       with:
         submodules: 'true'
+        
+    - name: Login registry
+      uses: docker/login-action@v1
+      with:
+        registry: ${{ secrets.PUSH_REGISTRY }}
+        username: ${{ secrets.PUSH_USERNAME }}
+        password: ${{ secrets.PUSH_PASSWORD }}
+        
     - name: Build NoWeb Image
       uses: docker/build-push-action@v2
       with:
         context: .
-        push: false
+        push: true
         file: 'Dockerfile.noweb'
         build-args: IGNORE_CHINA_MIRROR=1
+        tags: ${{ secrets.PUSH_REGISTRY }}/${{ secrets.PUSH_USERNAME }}/${{ secrets.PUSH_NAME }}:latest
